add server to plugin